--- a/src/main/pages/disactive.html
+++ b/src/main/pages/disactive.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/disactive.css">
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/select.css">
     <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
     <script src="/hello-ghpages/src/main/layui/layui.js"></script>
     <script src="/hello-ghpages/src/main/js/select.js"></script>
