--- a/src/main/pages/putforward.html
+++ b/src/main/pages/putforward.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/putforward.css">
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/select.css">
     <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
     <script src="/hello-ghpages/src/main/layui/layui.js"></script>
+    <script src="/hello-ghpages/src/main/js/select.js"></script>
 </head>
 <style>
     .layui-tab {
@@ -188,6 +190,7 @@
     start();
 
     function start() {
+        $('select').selectbox();
         layui.use('element', function() {
             var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
             //监听导航点击
