--- a/src/main/pages/putforward.html
+++ b/src/main/pages/putforward.html
@@ -144,10 +144,18 @@
                                         <select>
                                         <option>最近三个月</option>
                                         <option>昨天</option>
+                                        <option>2天前</option>
+                                        <option>7天前</option>
                                     </select>
                                         <select>
                                         <option>
                                             所有交易类型
+                                        </option>
+                                        <option>
+                                            京东交易类型
+                                        </option>
+                                        <option>
+                                            淘宝交易类型
                                         </option>
                                     </select>
                                         <input type="text" placeholder="输入活动名称|备注关键字" />
