--- a/src/main/pages/putforward.html
+++ b/src/main/pages/putforward.html
@@ -197,7 +197,7 @@
     start();
 
     function start() {
-        $('select').selectbox();
+        $('#demo-basic').selectbox();
         layui.use('element', function() {
             var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
             //监听导航点击
