--- a/src/main/pages/accountnumber.html
+++ b/src/main/pages/accountnumber.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>折多多</title>
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/accountnumber.css">
-    <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
-    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../layui/css/layui.css">
+    <link rel="stylesheet" href="../css/person.css">
+    <link rel="stylesheet" href="../css/accountnumber.css">
+    <link rel="stylesheet" href="../css/iconfont.css">
+    <script src="../layui/layui.js"></script>
 </head>
 <style>
     .layui-tab {
