--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="Keywords" content="折多多,折多多官方app下载,折多多APP">
     <meta name="Description" content="折多多官方APP：3000多万人都在用的网购省钱工具。消费有收益，创业大平台，折多多邀请码:15515500039，注册自动升级超级会员，快来加入到折多多大家庭吧！">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/owl.carousel.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/responsive.css">
-    <link rel="stylesheet" href="../css/register.css">
-    <link rel="stylesheet" href="../css/login.css">
-    <link rel="stylesheet" href="../layui/css/layui.css">
-    <link rel="stylesheet" href="../css/person.css">
+    <link rel="stylesheet" href="./src/main/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./src/main/css/owl.carousel.css">
+    <link rel="stylesheet" href="./src/main/css/main.css">
+    <link rel="stylesheet" href="./src/main/css/responsive.css">
+    <link rel="stylesheet" href="./src/main/css/register.css">
+    <link rel="stylesheet" href="./src/main/css/login.css">
+    <link rel="stylesheet" href="./src/main/layui/css/layui.css">
+    <link rel="stylesheet" href="./src/main/css/person.css">
 </head>
 
 <body>
@@ -277,11 +277,11 @@
             </div>
         </div>
     </div>
-    <script src="../js/jquery.min.js"></script>
-    <script src="../layui/layui.js"></script>
-    <script src="../js/fancybox.pack.js"></script>
-    <script src="../js/carousel.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="./src/main/js/jquery.min.js"></script>
+    <script src="./src/main/layui/layui.js"></script>
+    <script src="./src/main/js/fancybox.pack.js"></script>
+    <script src="./src/main/js/carousel.min.js"></script>
+    <script src="./src/main/js/main.js"></script>
     <script type="text/javascript">
         var wdwidth = $(document).width()
         if (wdwidth > 769) {
@@ -293,11 +293,11 @@
         }
 
         function toregister() {
-            window.location.href = "../pages/register.html";
+            window.location.href = "./src/main/pages/register.html";
         }
 
         function tologin() {
-            window.location.href = "../pages/login.html";
+            window.location.href = "./src/main/pages/login.html";
         }
 
         function firstPage() {
